--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Andrew'sTitle</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
 </head>
 <body>
   <header>
     <div id="logo" onclick="slowScroll('#top')">
-      <span>Andrew'sCompany</span>
+      <span>ZetAqua</span>
     </div>
     <div id="about">
       <a href="#" title="Возможности" onclick="slowScroll('#main')">Возможности</a>
@@ -36,8 +37,8 @@
     <h2>Преимущества</h2>
     <h4>С нами все проще</h4>
     <div class="img">
-      <img src="img/smallsize/1.jpg" alt="">
-      <span>Очистка воды</span>
+      <img src="img/smallsize/1.jpg" alt="" onclick='location.href="file:///C:/Andrew/project/article.html#"'>
+      <span>Водоподготовка для ЖКХ</span>
     </div>
     <div class="img">
       <img src="img/smallsize/2.jpg" alt="">
@@ -83,6 +84,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae asperiores debitis perspiciatis perferendis nemo tempore distinctio officia commodi et non tempora laudantium culpa nostrum, quidem, quasi ratione itaque nam.</p>
     </div>
   </div>
+  <a id="buttonUp"></a>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/mainPageScript.js"></script>
 </body>
